--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "libraries/Adafruit_Sensor"]
 	path = libraries/Adafruit_Sensor
 	url = git@github.com:adafruit/Adafruit_Sensor.git
+[submodule "libraries/Low-Power"]
+	path = libraries/Low-Power
+	url = git@github.com:rocketscream/Low-Power.git
